Simple overflow:auto for the screen issue

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ html, body {
         color: white;
         font-size: 2em;
         font-family: 'Open Sans Condensed', sans-serif;
+        overflow: auto;
     }
 
         #messageText {
